--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ font-family: "Roboto", sans-serif;
 
 
 .container{
-    /* background-color: yellow; */
+  
     max-width: 1200px;
     margin: auto;
    
@@ -17,16 +17,15 @@ font-family: "Roboto", sans-serif;
 }
 nav{
     display: flex;
-    justify-content: space-around;
-    align-items: center;
-    /* background-color: aquamarine; */
+    justify-content: space-between;
     padding: 30px;
     position: fixed; 
      top: 0; 
     left: 50%;
-        /* بدء العنصر من منتصف الصفحة */
+    width: 1200px;
+      
         transform: translateX(-50%);
-        width: 80%;
+        
     z-index: 1000;
 }
 
@@ -58,6 +57,10 @@ text-decoration: none;
 padding: 0 20px;
 color: white;
 font-weight: bold;
+}
+
+li a:hover{
+    color: orange
 }
 form{
     border: 2px solid orange;
@@ -92,3 +95,119 @@ form input::placeholder{
     color: white;
 }
 
+
+
+
+.colummn2{
+  
+}
+
+.content{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    min-height: 100vh;
+   width: 100%;
+   
+
+    
+}
+
+.content .column1 p{
+    font-size: 40px;
+    font-weight: 600;
+    color: white;
+}
+
+.d1{
+    color: orange;
+}
+.content .column1 p.subtitle{
+    font-size: 20px;
+    font-weight: 300;
+    line-height: 2;
+    
+}
+
+.column1 button{
+    background-color: orange;
+    padding: 10px 35px;
+    border: none;
+    border-radius: 8px;
+    margin-top: 30px;
+    text-align: center;
+    font-size: 20px;
+    cursor: pointer;
+
+}
+
+
+ .colummn2{
+    background-color: rgba(0, 0, 0, 0.5);
+  
+    width: 25%;
+    height: 60vh;
+   text-align: center;
+    margin-top: 100px;
+   border-radius: 7px;
+  
+
+
+ }
+ .colummn2 button.center{
+   margin: auto;
+    display: block;
+    color: orange;
+    background-color: white;
+    padding: 10px 70px;
+    margin-top: 40px;
+    font-size: 20px;
+    border-radius: 15px;
+    border: none;
+    font-weight: 700;
+
+}
+
+.colummn2 form{
+    border: none;
+
+}
+ .colummn2 form input{
+    border-bottom: 1px solid orange;
+    margin-right: 20px;
+ 
+    margin-top: 30px;
+    border-radius: 30px;
+} 
+
+
+
+.colummn2 form .login{
+    display: block;
+    margin: auto;
+    color: black;
+    font-weight: bold;
+    border-radius: 10px;
+    font-size: 20px;
+    padding: 10px 80px;
+    margin-top: 30px;
+}
+.colummn2 form .login:hover{
+    background-color: yellow;
+}
+
+.icons{
+    margin-top: 30px;
+    color: rgb(196, 190, 190);
+  
+}
+
+.icons i{
+   letter-spacing: 20px;
+   font-size: 20px;
+   cursor: pointer;
+}
+
+.icons i:hover{
+    color: orange;
+}
